Switched file extensions, removed old files

--- a/HelloTriangle/Makefile
+++ b/HelloTriangle/Makefile
@@ -2,12 +2,12 @@ CFLAGS = -std=c++17 -O2
 LDFLAGS = -lglfw -lvulkan -ldl -lpthread -lX11 -lXrandr
 
 HelloTriangle: main.cpp
-	g++ $(CFLAGS) -o HelloTriangle main.cpp $(LDFLAGS)
+	g++ $(CFLAGS) -o HelloTriangle.out main.cpp $(LDFLAGS)
 
 .PHONY: test clean
 
 test: HelloTriangle
-	./HelloTriangle
+	./HelloTriangle.out
 
 clean:
-	rm -f HelloTriangle 
+	rm -f HelloTriangle.out 
