--- a/HelloTriangle/Makefile
+++ b/HelloTriangle/Makefile
@@ -2,6 +2,7 @@ CFLAGS = -std=c++17 -O2
 LDFLAGS = -lglfw -lvulkan -ldl -lpthread -lX11 -lXrandr
 
 HelloTriangle: main.cpp
+	cd shaders/	&& ./compile.sh
 	g++ $(CFLAGS) -o HelloTriangle.out main.cpp $(LDFLAGS)
 
 .PHONY: test clean
