--- a/HelloTriangle/Makefile
+++ b/HelloTriangle/Makefile
@@ -1,9 +1,10 @@
 CFLAGS = -std=c++17 -O2
+RFLAGS = -std=c++17 -O3
 LDFLAGS = -lglfw -lvulkan -ldl -lpthread -lX11 -lXrandr
 
 HelloTriangle: main.cpp
 	cd shaders/	&& ./compile.sh
-	g++ $(CFLAGS) -o HelloTriangle.out main.cpp $(LDFLAGS)
+	g++ $(RFLAGS) -o HelloTriangle.out main.cpp $(LDFLAGS)
 
 .PHONY: test clean
 
